# Projekt_SO2

./: CMakeLists.txt  README.md
Projekt 1/: main1.cpp
Projekt 2/: chat_log.txt  client.cpp  dokompilacji  server.cpp
